Changes to avatar

--- a/index.html
+++ b/index.html
@@ -74,10 +74,19 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Person",
+      "@type": "Website",
+      "url": "https://www.cristina-assuncao.com",
       "name": "Cristina Assunção",
-      "url": "https://cristina-assuncao.com",
-      "image": "https://cristina-assuncao.com/images/avatar.png"
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Cristina Assunção",
+        "url": "https://www.cristina-assuncao.com",
+        "image": "https://www.cristina-assuncao.com/images/avatar.png",
+      }
+        "sameAs": [
+          "https://github.com/Cristina-Assuncao"
+        ]
+        "image": "https://www.cristina-assuncao.com/images/avatar.png"
     }
   </script>
 </body>
