--- a/about-2.html
+++ b/about-2.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="index.css">
 
     <!-- Appears in the tab -->
-    <title>Cristina Assunção</title>
+    <title>Cristina Assunção | About</title>
 </head>
 
 <body>
@@ -32,11 +32,11 @@
     <div id="overlay" class="overlay">
       <nav class="overlay-menu">
         <a href="working-on-it.html">ARTWORK</a>
-        <a href="working-on-it.html">PRODUCTION</a>
         <a href="working-on-it.html">PHOTOGRAPHY</a>
+        <a href="working-on-it.html">PRODUCTION</a>
         <br/><br/>
-        <a href="about.html">ABOUT</a>
         <a href="working-on-it.html">BLOG</a>
+        <a href="about.html">ABOUT</a>
       </nav>
 
       <nav class="overlay-footer">
@@ -60,9 +60,63 @@
       </nav>
     </div>
   </div>
+  <main class="about-page">
 
-  <main>
-    <div id="image-container"></div>
+    <!-- 1. PREVIOUS WORK -->
+    <section class="about-section previous-work">
+      <h2>Past Projects</h2>
+
+      <div class="work-item">
+        <img src="images/project1.jpg" alt="Project 1">
+        <div class="work-text">
+          <h3>Project Title</h3>
+          <p>Description of the work. Medium, year, short context.</p>
+        </div>
+      </div>
+
+      <div class="work-item">
+        <img src="images/project2.jpg" alt="Project 2">
+        <div class="work-text">
+          <h3>Project Title</h3>
+          <p>Description of the work.</p>
+        </div>
+      </div>
+
+    </section>
+
+
+    <!-- 2. BIO -->
+    <section class="about-section bio">
+      <h2>Bio</h2>
+
+      <div class="bio-content">
+        <img src="images/your-photo.jpg" alt="Cristina Assunção portrait">
+        <div class="bio-text">
+          <p>
+            Cristina Assunção is a visual and performance artist...
+          </p>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- 3. CV -->
+    <section class="about-section cv">
+      <h2>CV</h2>
+
+      <div class="cv-content">
+        <p><strong>Education</strong></p>
+        <p>2024 – MA ...</p>
+        <p>2020 – BA ...</p>
+
+        <br>
+
+        <p><strong>Exhibitions</strong></p>
+        <p>2025 – Exhibition Name</p>
+        <p>2024 – Exhibition Name</p>
+      </div>
+    </section>
+
   </main>
 
   <footer>
